# Onboard-SDK-ROS

./: .gitignore  .travis.yml  CMakeLists.txt  Controller.py  Doxyfile.conf  Makefile  README.md  ReadMe.md  configure  gen_eclipse_project.sh  package.xml  ros-melodic-dji-onboard-sdk-build-deps_1.0_all.deb  setup.py  tags  waypoint.md
dji_sdk/: CMakeLists.txt  README.md  package.xml  setup.py
dji_sdk/action/: GlobalPositionNavigation.action  LocalPositionNavigation.action  WaypointNavigation.action
dji_sdk/include/: SDK.h  djiAction.h  djiMain.h  djiVariable.h  dji_linux_helpers.hpp  dji_sdk_node.h
dji_sdk/include/DJI_LIB/: DJI_Pro_App.cpp  DJI_Pro_App.h
dji_sdk/include/dji_sdk/: DJI_HardDriver_Manifold.h  DJI_LIB_ROS_Adapter.h  bag_logger.h  dji_drone.h  dji_sdk.h  dji_sdk_geometry.h  dji_sdk_mission.h  dji_sdk_node.h
dji_sdk/launch/: sdk.launch  sdk.launch.org  sdk_manifold.launch  sdk_manifold_vm.launch  sdk_osx.launch  sdk_usb.launch  sdk_vm.launch
dji_sdk/msg/: A3GPS.msg  A3RTK.msg  Acceleration.msg  AttitudeQuaternion.msg  Compass.msg  FCTimeInUTC.msg  FlightAnomaly.msg  FlightControlInfo.msg  GPSHealth.msg  GPSPosition.msg  GlobalPosition.msg  Int16Stamped.msg  LogControl.msg  MissionEventWpAction.msg  MissionEventWpReach.msg  MissionEventWpUpload.msg  MissionFollowme.msg  MissionFollowmeTarget.msg  MissionHotpointTask.msg  MissionPushInfo.msg  MissionStatusFollowme.msg  MissionStatusHotpoint.msg  MissionStatusOther.msg  MissionStatusWaypoint.msg  MissionWaypoint.msg  MissionWaypointAction.msg  MissionWaypointTask.msg  PowerStatus.msg  RCChannels.msg  README.md  RTKPosition.msg  RTKYaw.msg  TimeStamp.msg  Velocity.msg
dji_sdk/src/: DJIDrone.cpp  DJI_LIB_ROS_Adapter.cpp  djiMain.cpp  dji_drone.h  dji_drone.py  dji_sdk.py  dji_sdk_geometry.cpp  dji_sdk_node.cpp  main.cpp
dji_sdk/src/dji_sdk/: dji_drone.py
dji_sdk/src/modules/: djiAction.cpp  djiPublisher.cpp  djiService.cpp  djiVariable.cpp  dji_sdk_node.cpp  dji_sdk_node_actions.cpp  dji_sdk_node_control.cpp  dji_sdk_node_geometry.cpp  dji_sdk_node_main.cpp  dji_sdk_node_mission.cpp  dji_sdk_node_mission_services.cpp  dji_sdk_node_mobile_comm.cpp  dji_sdk_node_publisher.cpp  dji_sdk_node_services.cpp  dji_sdk_node_subscriber.cpp
dji_sdk/src/test/: dji_sdk_test.cpp  dji_sdk_test.h
dji_sdk/srv/: DroneArmControl.srv  DroneTaskControl.srv  GimbalAngleControl.srv  GimbalSpeedControl.srv  GlobalPositionControl.srv  LocalPositionControl.srv  MessageFrequencyControl.srv  MissionFmSetTarget.srv  MissionFmUpload.srv  MissionHpAction.srv  MissionHpDownload.srv  MissionHpSetRadius.srv  MissionHpSetSpeed.srv  MissionHpUpload.srv  MissionPause.srv  MissionStart.srv  MissionWpAction.srv  MissionWpDownload.srv  MissionWpGetSpeed.srv  MissionWpSetSpeed.srv  MissionWpUpload.srv  QueryDroneVersion.srv  SDKPermissionControl.srv  SendDataToRemoteDevice.srv  SetLocalPosRef.srv  SetupCameraStream.srv  SyncFlagControl.srv  VelocityControl.srv  VirtualRCDataControl.srv  VirtualRCEnableControl.srv  WayPointReachedData.srv
dji_sdk/test/: dji_sdk-node.test  test_dji_sdk_geometry.cpp
dji_sdk_demo/: CMakeLists.txt  README.md  package.xml
dji_sdk_demo/cmake-modules/: FindOpenCVContribImgProc.cmake  FindOpenCVViz.cmake
dji_sdk_demo/include/dji_sdk_demo/: demo_camera_gimbal.h  demo_flight_control.h  demo_local_position_control.h  demo_mfio.h  demo_mission.h  demo_mobile_comm.h  demo_payload_comm.h  demo_stereo_depth_perception.h  demo_stereo_object_depth_perception.h  demo_time_sync.h  flight_controller_ros.hh
dji_sdk_demo/include/stereo_utility/: camera_param.hpp  config.hpp  point_cloud_viewer.hpp  stereo_frame.hpp
dji_sdk_demo/launch/: dji_sdk_client.launch
dji_sdk_demo/script/: client.py
dji_sdk_demo/src/: .client.cpp.swp  CMakeLists.txt  client.cpp  client.py  demo_camera_gimbal.cpp  demo_flight_control.cpp  demo_local_position_control.cpp  demo_mfio.cpp  demo_mission.cpp  demo_mobile_comm.cpp  demo_payload_comm.cpp  demo_stereo_depth_perception.cpp  demo_stereo_object_depth_perception.cpp  demo_time_sync.cpp  flight_control_node.cc  wp_client.cpp
dji_sdk_demo/src/module/: CMakeLists.txt  flight_controller_ros.cc
dji_sdk_demo/src/stereo_utility/: camera_param.cpp  config.cpp  point_cloud_viewer.cpp  stereo_frame.cpp
dji_sdk_lib/: CMakeLists.txt  README.md  package.xml
dji_sdk_lib/include/dji_sdk_lib/: DJICommonType.h  DJI_API.h  DJI_App.h  DJI_Camera.h  DJI_Codec.h  DJI_Config.h  DJI_Flight.h  DJI_Follow.h  DJI_HardDriver.h  DJI_HotPoint.h  DJI_Mission.h  DJI_Type.h  DJI_Version.h  (+2 more)
dji_sdk_lib/src/: DJI_API.cpp  DJI_App.cpp  DJI_Camera.cpp  DJI_Codec.cpp  DJI_Flight.cpp  DJI_Flight.cpp~  DJI_Follow.cpp  DJI_HardDriver.cpp  DJI_HotPoint.cpp  DJI_Link.cpp  DJI_Memory.cpp  DJI_Mission.cpp  DJI_VirtualRC.cpp  DJI_WayPoint.cpp
dji_sdk_manifold_read_cam/: CMakeLists.txt  README.md  package.xml
dji_sdk_manifold_read_cam/include/: djiCam.h  djicam.h  usbGadget.h  usbHost.h
dji_sdk_manifold_read_cam/src/: CamMain.cpp  djiCam.c  nv_cam.cpp  usbHost.c
dji_sdk_read_cam/: README.md  package.xml
dji_sdk_read_cam/launch/: manifold_cam.launch
dji_sdk_read_cam/src/: nv_cam.cpp
src/: CMakeLists.txt  advanced_sensing_node.cc  advanced_sensing_node.cpp  client.cpp  clinet.cpp  djiMain.cpp  dji_sdk.py  dji_vehicle_node.cc  dji_vehicle_node.cpp  flight_control_node.cc  flight_control_node.cpp  gimbal_camera_control_node.cc  gimbal_camera_control_node.cpp  map_nav_srv.cpp  mfio_control_node.cc  wp_client.cpp
src/dji_osdk_ros/: CMakeLists.txt  advanced_sensing_node.cpp  dji_vehicle_node.cpp  mobile_device_node.cpp  osdkhal_linux.c  osdkosal_linux.c  telemetry_node.cpp  vehicle_wrapper.cc  vehicle_wrapper.cpp
src/dji_osdk_ros_3.8.1/: CMakeLists.txt  UserConfig.txt  dji_linux_helpers.cpp  main.cpp
src/dji_osdk_ros_obsoleted/: CMakeLists.txt  dji_linux_environment.cpp  dji_linux_helpers.cpp  main.cpp
src/dji_sdk/: vehicle_wrapper.cpp
src/dji_sdk_obsoleted/: CMakeLists.txt  dji_linux_environment.cpp  dji_linux_helpers.cpp
src/modules/: djiAction.cpp  djiPublisher.cpp  djiService.cpp  djiVariable.cpp
(+634 files in other folders)
