<package format="2">
  <name>dji_osdk_ros</name>
  <version>4.0.1002</version>
  <description>A ROS package using DJI Onboard SDK</description>

  
  
  
  <maintainer email="kevin.hoo@dji.com">kevin.hoo</maintainer>


  
  
  
  <license>MIT</license>


  
  
  
  <url type="website">http://developer.dji.com/onboard-sdk/documentation/github-platform-docs/ROS/README.html</url>


  
  
  
  
  <author email="arjun.menon@dji.com">Arjun Menon</author>


  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  
  <export>
    

  </export>
</package>