<?xml version="1.0"?>
<package>
  <name>dji_sdk_lib</name>
  <version>0.0.0</version>
  <description>The dji_sdk_lib package</description>


  <maintainer email="sdk@dji.com">DJI SDK</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
